<resources>
    <string name="app_name">Capture the Flag</string>
    <string name="start">Login</string>
    <string name="flag_desc">Placeholder Flag</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="username_prompt">User:</string>
    <string name="password_prompt">Pass:</string>
    <string name="create_session">Create Room</string>
    <string name="join_session">Join Room</string>
    <string name="sessionID_hint">00000</string>
    <string name="sessionID_prompt">Room ID</string>
    <string name="search_session">Search</string>
    <string name="sessionID_display">00000</string>
    <string name="sessionID_desc">Your Room ID is:</string>
    <string name="searching_players">Searching for co-op player . . .</string>
    <string name="starting_game">Starting game . . .</string>
    <string name="start_game">Start Game</string>
    <string name="placeholder_country">Country</string>
    <string name="time">00 : 00 : 00 : 00</string>
    <string name="cur_color_desc">Currently selected color</string>
    <string name="cur_pat_desc">Currently selected pattern</string>
    <string name="scan_code">Scan</string>
    <string name="qr_map">Map</string>
    <string name="back">Back</string>
    <string name="found_session">Room found!\nWaiting for owner to start . . .</string>
    <string name="score_desc">Score:</string>
    <string name="leaderboard_header">Leaderboard</string>
    <string name="leaderboard_desc">Top scores for </string>
    <string name="qr_placeholder">QR</string>
    <string name="top_score_desc">Best Time</string>
    <string name="win_score_desc">Winning Time</string>
</resources>