<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_carousel" android:id="@+id/include_login" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:background="@color/white"
        android:hint="@string/username_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/username_prompt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_username"
        app:layout_constraintEnd_toStartOf="@+id/edittext_username"
        app:layout_constraintTop_toTopOf="@+id/edittext_username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="username"
        android:background="@color/white"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/password_prompt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_password"
        app:layout_constraintEnd_toStartOf="@+id/edittext_password"
        app:layout_constraintTop_toTopOf="@+id/edittext_password"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>