<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_join"
        layout="@layout/title_carousel"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textview_join_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sessionID_prompt"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittext_sessionID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edittext_sessionID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:background="@color/white"
        android:hint="@string/sessionID_hint"
        android:inputType="number"
        android:textSize="40sp"
        android:maxLength="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/search_session"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_sessionID" />

    <Button
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textview_searching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/found_session"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_search" />

</androidx.constraintlayout.widget.ConstraintLayout>